--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-lottie": "^1.2.3",
+		"socket.io-client": "^4.3.2",
 		"styled-components": "^5.3.3"
 	},
 	"devDependencies": {
