--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.0.6",
     "@mui/styled-engine-sc": "^5.0.4",
     "axios": "^0.24.0",
@@ -27,6 +28,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-lottie": "^1.2.3",
+    "socket.io-client": "^4.3.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
